assets/css/footer.scss
.site-footer .footer-connect {
  padding: 1.5rem 0px;
}
.site-footer .site-info {
  padding: 2rem 0px;
}
.site-footer .footer-connect form {
  display: flex;
}
.site-footer .footer-connect .btn {
  margin-left: 1rem;
}
.footers a {color:#696969;}
.footers p {color:#696969;}
.footers ul {line-height:30px;}
#social-fb:hover {
     color: #3B5998;
     transition:all .001s;
 }
 #social-tw:hover {
     color: #4099FF;
     transition:all .001s;
 }
 #social-gp:hover {
     color: #d34836;
     transition:all .001s;
 }
 #social-em:hover {
     color: #f39c12;
     transition:all .001s;
 }
 @media (max-width: 960px) and (min-width: 501px) {
   footer {
     text-align: center;
   }
 }
@media (max-width: 500px) {
  footer {
    text-align: center;
  }
}
.shift-up-container {
  height: -50%;

  .shift-up-item {
    transform: translateY(-50%);
  }
}
.pb-200 {
  padding-bottom: 200px;
}
footer.site-footer {
  #newsletter{
    margin-bottom: -100px;
    transform: translateY(-200px);
  }
}
.triangle {
  width: 0;
  height: 0;
  border-style: solid;
  border-width:  0 0 100px 100px;
  border-color: transparent transparent $secondary ;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 101;
  svg {
    width: 3em;
    height: 3em;
    position: absolute;
    left: -55px;
    top: 45px;
    z-index: 99999;
    transform: rotate(-45deg);
    color: white;
  }
  transition: transform .1s ease-out;
  transform-origin: bottom right;
  &:hover {
    transform: scale(1.05);
  }
}

